# LeWMQuad-v3

./: .gitignore  .gitmodules  README.md
config/: go2_platform_manifest.yaml  go2_primitive_registry.yaml  rosbag_record_qos_overrides.yaml
docs/: architecture_talking_points.md  collection_policy.md  decision_pivot_to_genesis.md  fresh_retrain_data_spec.md  genesis_rocm_local_audit.md  genesis_vulkan_local_audit.md  go2_genesis_gazebo_ros2_bringup_plan.md  go2_ros2_scaffold_runbook.md  plan_genesis_bulk_bringup.md  upstream_go2_sim_audit.md  v3_hjepa_plan.md
lewm_genesis/: CMakeLists.txt  package.xml
lewm_genesis/lewm_genesis/: __init__.py  batch_renderer.py  go2_adapter.py  lewm_contract.py  mcap_writer.py  parity_checks.py  render_replay.py  rollout.py  ros_msg_adapter.py  scene_builder.py  scene_loader.py
lewm_genesis/lewm_genesis/collectors/: __init__.py  base.py  frontier.py  ou_noise.py  primitive_curriculum.py  recovery.py  route_teacher.py
lewm_genesis/lewm_genesis/tests/: test_collectors.py  test_lewm_contract.py  test_mcap_writer.py  test_render_replay.py  test_rollout.py  test_ros_msg_adapter.py  test_scene_builder_backend.py  test_scene_loader.py
lewm_go2_bringup/: CMakeLists.txt  package.xml
lewm_go2_bringup/launch/: go2_sim.launch.py
lewm_go2_bringup/urdf/: lewm_go2_with_contacts.urdf.xacro
lewm_go2_bringup/worlds/: lewm_default.sdf
lewm_go2_control/: CMakeLists.txt  package.xml
lewm_go2_control/msg/: BaseState.msg  CommandBlock.msg  EpisodeInfo.msg  ExecutedCommandBlock.msg  FootContacts.msg  Go2ModeState.msg  ResetEvent.msg
lewm_go2_control/nodes/: base_state_publisher  camera_info_publisher  command_block_adapter  feature_check_runner  foot_contacts_publisher  mode_manager  reset_manager
lewm_go2_control/srv/: ResetEpisode.srv  RunFeatureCheck.srv  SetGo2Mode.srv  SetPolicy.srv
lewm_worlds/: CMakeLists.txt  package.xml
lewm_worlds/lewm_worlds/: __init__.py  corpus.py  families.py  manifest.py  randomization.py  scene_graph.py  splits.py
lewm_worlds/lewm_worlds/exporters/: __init__.py  to_gazebo_sdf.py  to_genesis.py
lewm_worlds/lewm_worlds/labels/: __init__.py  derived.py  topology.py
lewm_worlds/lewm_worlds/tests/: test_derived_labels.py  test_scene_graph.py
models/tier_a_go2_locomotion/20260516_contract_ppo/: README.md  cfgs.pkl
scripts/: acceptance_go2_contract.sh  audit_go2_primitives.sh  benchmark_gazebo_throughput.sh  build_go2_sim.sh  check_genesis_backend_smoke.py  check_genesis_go2_backend_smoke.py  check_genesis_go2_locomotion_env_rocm_smoke.sh  check_genesis_go2_locomotion_env_smoke.py  check_genesis_go2_locomotion_train_rocm_smoke.sh  check_genesis_go2_policy_contract.py  check_genesis_go2_policy_contract.sh  check_genesis_go2_rocm_smoke.sh  check_genesis_rocm_smoke.sh  check_ros_gz_alignment.sh  convert_smoke_bag_to_raw_rollout.py  convert_smoke_bag_to_raw_rollout.sh  derive_raw_rollout_labels.py  fetch_genesis_go2_locomotion_examples.sh  generate_scene_corpus.sh  generate_smoke_world.sh  genesis_bulk_rollout.py  genesis_bulk_rollout.sh  install_jazzy_harmonic_deps.sh  launch_go2_sim.sh  plan_bulk_render_replay.py  plan_bulk_render_replay.sh  plan_gpu_render_replay.py  plan_gpu_render_replay.sh  record_smoke_bag.sh  render_replay_genesis.py  render_replay_genesis.sh  ros2_go2.sh  ros_env.sh  setup_genesis_rocm_training.sh  smoke_go2_topics.sh  train_genesis_go2_locomotion.sh  train_genesis_go2_locomotion_contract.py  train_genesis_go2_locomotion_contract.sh
