<?xml version="1.0"?>
<package format="3">
  <name>lewm_go2_bringup</name>
  <version>0.1.0</version>
  <description>LeWMQuad-v3 launch wrappers for the selected Unitree Go2 Gazebo simulator.</description>
  <maintainer email="maintainer@example.com">LeWMQuad Maintainers</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>champ_base</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>gz_ros2_control</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>unitree_go2_description</exec_depend>
  <exec_depend>unitree_go2_sim</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

