<?xml version="1.0"?>
<package format="3">
  <name>lewm_worlds</name>
  <version>0.1.0</version>
  <description>Canonical scene manifests, labels, and exporters for LeWMQuad-v3 worlds.</description>
  <maintainer email="maintainer@example.com">LeWMQuad Maintainers</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>ament_cmake_python</build_depend>

  <exec_depend>python3-yaml</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
